# Asteria

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  Asteria.code-workspace  README.md  environment.yml  pyproject.toml
.agents/plugins/: marketplace.json
.codex/skills/asteria-governance/: SKILL.md
.kiro/settings/: mcp.json
.kiro/specs/kiro-governance-setup/: .config.kiro  requirements.md
.kiro/specs/malf-go-sqlite/: .config.kiro  requirements.md
.windsurf/workflows/: bounded-proof.md  code-review.md  debug-pipeline.md
docs/: README.md
docs/00-governance/: 00-asteria-refactor-charter-v1.md  01-asteria-refactor-origin-trace-v1.md  02-current-system-inventory-v1.md  03-data-to-malf-rerun-decision-rule-v1.md  04-database-build-runner-standard-v1.md  05-mainline-module-completion-gap-audit-v1.md  06-asteria-6a-workflow-protocol-v1.md
docs/01-architecture/: 00-mainline-authoritative-map-v1.md  01-database-topology-v1.md  02-validated-asset-inventory-v1.md  03-predecessor-system-module-inventory-v1.md  04-historical-ledger-incremental-protocol-v1.md
docs/02-modules/: 00-module-design-document-standard-v1.md  01-data-foundation-design-v1.md  02-malf-authoritative-design-bridge-v1.md  03-malf-schema-runner-audit-spec-v1.md  04-mainline-module-delivery-index-v1.md
docs/02-modules/alpha/: 00-authority-design-v1.md  00-pending-module-gate-v1.md  01-semantic-contract-v1.md  02-database-schema-spec-v1.md  03-runner-contract-v1.md  04-audit-spec-v1.md  05-build-card-v1.md
docs/02-modules/data/: 00-authority-design-v1.md  01-semantic-contract-v1.md  (+4 more)
docs/03-refactor/: 00-module-gate-ledger-v1.md  01-malf-schema-and-runner-contract-freeze-card-20260427.md  02-mainline-readiness-gap-review-v1.md  03-malf-day-bounded-proof-construction-checklist-v1.md  04-asteria-full-system-roadmap-v1.md  05-asteria-v1-usage-validation-roadmap-v1.md  05-system-validation-repair-roadmap-v1.md  06-asteria-core-module-recovery-and-proof-roadmap-v1.md  07-alpha-pas-source-inventory-v1.md  08-alpha-pas-authority-map-v1.md  09-asteria-v2-core-system-reconstruction-roadmap-v1.md
docs/04-execution/: 00-conclusion-index-v1.md  00-execution-discipline-v1.md  README.md
governance/: database_topology_registry.toml  historical_ledger_registry.toml  module_gate_registry.toml
governance/module_api_contracts/: alpha.toml  data.toml  malf.toml  pipeline.toml  portfolio_plan.toml  position.toml  signal.toml  system_readout.toml  trade.toml
plugins/asteria-workflow/: hooks.json
scripts/: __init__.py
scripts/alpha/: __init__.py  run_alpha_bounded_proof.py  run_alpha_family_audit.py  run_alpha_family_build.py  run_alpha_pas_bounded_proof.py  run_alpha_production_builder.py
scripts/data/: __init__.py  run_data_bootstrap.py  run_data_daily_incremental_hardening.py  run_data_production_audit.py  run_legacy_data_import.py  run_market_meta_build.py  run_sw_industry_snapshot_import.py
scripts/dev/: doctor.py
scripts/governance/: __init__.py  check_asteria_workflow.py  check_project_governance.py  sync_project_docs.py
scripts/malf/: run_malf_day_audit.py  run_malf_day_core_build.py  run_malf_day_lifespan_build.py  run_malf_day_service_build.py  run_malf_day_supplemental_build.py
scripts/pipeline/: run_alpha_signal_2024_coverage_repair.py  run_alpha_signal_daily_incremental_ledger.py  run_downstream_coverage_gap_closeout.py  run_downstream_daily_incremental_ledger.py  run_downstream_reference_audit.py  run_final_release_closeout.py  run_formal_release_proof.py  run_formal_release_source_proof.py  run_full_rebuild_daily_incremental_release_closeout.py  run_pipeline_audit.py  run_pipeline_bounded_proof.py  run_pipeline_full_chain_dry_run.py  run_pipeline_full_daily_incremental_chain.py  run_pipeline_record.py  run_pipeline_year_replay_disposition_decision.py  run_pipeline_year_replay_source_selection_repair.py  run_v1_application_db_readiness_audit.py  run_v1_t_plus_one_open_backtesting_py_proof.py  run_v1_usage_readout_report.py  run_v1_usage_validation_scope.py  run_v1_usage_value_decision.py  run_v1_vectorbt_portfolio_analytics_proof.py  run_year_replay_coverage_gap_diagnosis.py
scripts/portfolio_plan/: run_portfolio_plan_2024_coverage_repair.py  run_portfolio_plan_audit.py  run_portfolio_plan_bounded_proof.py  run_portfolio_plan_build.py  run_portfolio_plan_daily_incremental_ledger.py
scripts/position/: run_position_2024_coverage_repair.py  run_position_audit.py  run_position_bounded_proof.py  run_position_build.py  run_position_daily_incremental_ledger.py
scripts/signal/: __init__.py  run_signal_audit.py  run_signal_bounded_proof.py  run_signal_build.py  run_signal_pas_alignment.py  run_signal_production_builder.py
scripts/system_readout/: run_system_readout_2024_coverage_repair.py  run_system_readout_audit.py  run_system_readout_bounded_proof.py  run_system_readout_build.py  run_system_readout_daily_incremental_ledger.py
scripts/trade/: run_trade_2024_coverage_repair.py  run_trade_audit.py  run_trade_bounded_proof.py  run_trade_build.py  run_trade_daily_incremental_ledger.py
src/asteria/: __init__.py
(+770 files in other folders)
